fixed bug where responsive menu button was cut off by Safari.

--- a/styles/style.css
+++ b/styles/style.css
@@ -428,7 +428,7 @@ margin-top: 150px;
         height: 75px;
         width: 75px;
         border-radius: 50%;
-        margin-top: 85vh;
+        margin-top: 78vh;
         position: absolute;
         position: fixed;
         margin-left: 75vw;
